--- a/source/templates/certificado-digital/nf-e.html
+++ b/source/templates/certificado-digital/nf-e.html
@@ -13,198 +13,7 @@
       </div>
     </section>
 
-    <!-- Table Section -->
-    <section id="nf-e" class="table-section">
-      <div class="container">
-        <div class="row first-row">
-          <div class="square-nfe img-product">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell">
-                  <img class="img-responsive" src="{% static 'img/nfe-cartao.jpg' %}"></img>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square-nfe title-product">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell">
-                  <div class="name-product">
-                    <h3>PJ NF-e</h3>
-                    <h3>A3 | Cartão</h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square-nfe price-nfe meses36 no-border-nfe">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 36 meses</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square-nfe price-nfe meses36 no-border-nfe">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h4>R$ 340,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="square-nfe img-product">
-            <div class="content-nfe">
-              <div class="table">
-                 <div class="table-cell">
-                   <img class="img-responsive" src="{% static 'img/nfe-cartao-leitor.png' %}"></img>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="square-nfe title-product">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell">
-                  <div class="name-product">
-                    <h3>PJ NF-e</h3>
-                    <h3>A3 | Cartão + Leitora</h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square-nfe price-nfe meses36 no-border-nfe">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 36 meses</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square-nfe price-nfe meses36 no-border-nfe">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h4>R$ 340,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="square-nfe img-product">
-            <div class="content-nfe">
-              <div class="table">
-                 <div class="table-cell">
-                   <img class="img-responsive" src="{% static 'img/ecnpj-a3-token.png' %}"></img>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="square-nfe title-product">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell">
-                  <div class="name-product">
-                    <h3>PJ NF-e</h3>
-                    <h3>A3 | Token</h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square-nfe price-nfe meses36 no-border-nfe">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 36 meses</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square-nfe price-nfe meses36 no-border-nfe">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h4>R$ 340,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="square-nfe no-image-nfe title-product">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell">
-                  <div class="name-product text-center">
-                    <h3>PJ NF-e</h3>
-                    <h3>A3 | Mídia do cliente</h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square-nfe price-nfe meses36 no-border-nfe">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 36 meses</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square-nfe price-nfe meses36 no-border-nfe">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h4>R$ 340,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="square-nfe no-image-nfe last title-product">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell">
-                  <div class="name-product text-center">
-                    <h3>PJ NF-e</h3>
-                    <h3>A1</h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square-nfe price-nfe last meses12-nfe no-border-nfe">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 12 meses</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square-nfe price-nfe last meses12-nfe no-border-nfe">
-            <div class="content-nfe">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h4>R$ 270,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+{% include 'certificado-digital/tabela.html' %}
 
 {% include 'certificado-digital/ecpf-acordeon.html' %}
 
