--- a/source/templates/certificado-digital/e-cpf.html
+++ b/source/templates/certificado-digital/e-cpf.html
@@ -13,228 +13,7 @@
       </div>
     </section>
 
-    <!-- Table Section -->
-    <section id="e-cpf" class="table-section">
-      <div class="container">
-        <div class="row first-row">
-          <div class="square img-product">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell">
-                  <img class="img-responsive" src="{% static 'img/ecpf-a3-cartao-sped.jpg' %}"></img>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square title-product">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell">
-                  <div class="name-product">
-                    <h3>e-CPF</h3>
-                    <h3>A3 | Cartão</h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses12">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 12 meses</h5>
-                    <h4>R$ 270,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses24">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 24 meses</h5>
-                  <h4>R$ 325,00</h4>       
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses36">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 36 meses</h5>
-                  <h4>R$ 340,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="square img-product">
-            <div class="content">
-              <div class="table">
-                 <div class="table-cell">
-                   <img class="img-responsive" src="{% static 'img/ecpf-a3-cartao-leitor-sped.png' %}"></img>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="square title-product">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell">
-                  <div class="name-product">
-                    <h3>e-CPF</h3>
-                    <h3>A3 | Cartão + Leitora</h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses12">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 12 meses</h5>
-                    <h4>R$ 270,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses24">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 24 meses</h5>
-                  <h4>R$ 325,00</h4>       
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses36">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 36 meses</h5>
-                  <h4>R$ 340,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="square img-product">
-            <div class="content">
-              <div class="table">
-                 <div class="table-cell">
-                   <img class="img-responsive" src="{% static 'img/ecnpj-a3-token.png' %}"></img>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="square title-product">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell">
-                  <div class="name-product">
-                    <h3>e-CPF</h3>
-                    <h3>A3 | Token</h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses12">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 12 meses</h5>
-                    <h4>R$ 270,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses24">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 24 meses</h5>
-                  <h4>R$ 325,00</h4>       
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses36">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 36 meses</h5>
-                  <h4>R$ 340,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="square no-image title-product">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell">
-                  <div class="name-product text-center">
-                    <h3>e-CPF</h3>
-                    <h3>A3 | Mídia do cliente</h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses12">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 12 meses</h5>
-                    <h4>R$ 270,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price meses24">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 24 meses</h5>
-                  <h4>R$ 325,00</h4>       
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="square no-image last title-product">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell">
-                  <div class="name-product text-center">
-                    <h3>e-CPF</h3>
-                    <h3>A1</h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="square price last meses12">
-            <div class="content">
-              <div class="table">
-                <div class="table-cell text-center">               
-                  <h5>Validade: 12 meses</h5>
-                    <h4>R$ 270,00</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+{% include 'certificado-digital/tabela.html' %}
 
 {% include 'certificado-digital/ecpf-acordeon.html' %}
 
