--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- Sets initial viewport load and disables zooming  -->
 
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Certificado Digital Vale: e-CNPJ, e-CPF, NF-e, Credit Service. Distribuidor autorizado da Serasa Experian em Pindamonhagaba-SP.">
+    <meta name="author" content="JP & MR">
+    <meta name="robots" content="index, follow"> 
 
     <title>Certificado Digital Vale</title>
 
@@ -50,6 +51,11 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
+
+    <!-- Marked 0.3.6 -->
+    <script src="{% static 'js/marked.min.js' %}"></script>
+
 
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
@@ -187,9 +193,9 @@
     <script src="{% static 'js/map.js' %}"></script>
 
     <script>
-
-      {% if message_sent %}
       $(document).ready(function(){
+
+        {% if message_sent %}
         //Gatilho do modal de confirmação do envio de email
         $('#modalEmailSent').modal('show');
         $('#modalEmailSent').on('shown.bs.modal', function(e){
@@ -197,8 +203,34 @@
 						$('#modalEmailSent').modal('hide'); }, 3000
           );
         });
+        {% endif %}
+
+        // Markdown
+        // ==================================================
+        // Quando a página for carregada (document), executa as funções.
+        // Primeira função:
+        //     $(".content-markdown") se refere a uma classe dentro de uma 
+        //     tag <p> em 'post_detail.html'.
+        //     '.this' se refere a '.content-markdown'
+        //     '.each()' executa uma iteração
+        //     'marked()' é chamada do script 'Markdown' acima.
+        //     'console.log()' exibe a saída no console do navegador
+        // Segunda função:
+        //     adiciona a classe 'img-responsive' para tornar responsivas 
+        //     as imagens adicionadas pelo app 'markdown'
+
+        $(".content-markdown").each(function(){
+            var content = $(this).text()
+            //console.log(content)
+            var markedContent = marked(content)
+            //console.log(markedContent)
+            $(this).html(markedContent)
+        });
+
+        //$(".post-detail-item img").each(function(){
+        //    $(this).addClass("img-responsive")
+        //});
       });
-      {% endif %}
 
       //Google Analytics
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
