--- a/source/templates/certificado-digital/acordeon.html
+++ b/source/templates/certificado-digital/acordeon.html
@@ -2,7 +2,7 @@
     <section id="{{ certificado }}" class="accordion-section">
       <div class="container">
         <div class="row">
-          <h4>Loren ipsum dolor sit amet, consectetur adispiscing elit, praesent malesuada mauris</h4>
+          <h4>Saiba mais sobre o {{ saiba_mais_produto }}</h4>
         </div>
         <div class="row">
           <div class="panel-group panel-group-lists" 
