renderiza markdown modal

--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -146,11 +146,15 @@
     {% endif %}
     <!-- Fim modalEmailSent -->
 
+    {% include 'service-credit-modal/credit-service-modal.html'%}
+
+    {#
     {% include 'service-credit-modal/modal_consulta.html'%}
     {% include 'service-credit-modal/modal_analise.html'%}
     {% include 'service-credit-modal/modal_negativacao.html'%}
     {% include 'service-credit-modal/modal_meproteja.html'%}
     {% include 'service-credit-modal/modal_infobusca.html'%}
+    #}
 
     <!-- Footer Section -->
     <section id="footer" class="footer-section">
