--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -1,3 +1,4 @@
+{% load compress %}
 {% load staticfiles %}
 
 <!DOCTYPE html>
@@ -19,19 +20,22 @@
     <!-- Bootstrap Core CSS 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     -->
-    
+
+    {% compress css %}
+
     <!-- Font Awesome CSS  -->
-    <link href="{% static 'css/font-awesome-4.6.3/css/font-awesome.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/font-awesome-4.6.3/css/font-awesome.min.css' %}" type="text/css" charset="utf-8">
 
     <!-- Bootstrap Core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" media="screen" type="text/css" charset="utf-8">
 
     <!-- Bootflat Core CSS -->
-    <link href="{% static 'css/bootflat.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/bootflat.min.css' %}" type="text/css" charset="utf-8">
 
     <!-- Custom CSS -->
-    <link href="{% static 'css/custom.css' %}" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}" media="screen" type="text/css" charset="utf-8">
 
+    {% endcompress %}
 
     <!-- Font Awesome CSS 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
@@ -46,17 +50,21 @@
 
     -->
 
+    {% compress js %}
+
     <!-- JQuery -->
     <script src="{% static 'js/jquery-1.10.1.min.js' %}"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-
     <!-- Marked 0.3.6 -->
     <script src="{% static 'js/marked.min.js' %}"></script>
 
+    <!-- Disable Google Maps scrolling -->
+    <script src="{% static 'js/map.js' %}"></script>
 
+    {% endcompress %}
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
@@ -125,8 +133,8 @@
     
     {% endblock %}
 
-    <!-- modalEmailSent -->
     {% if message_sent %}
+    <!-- modalEmailSent -->
     <div class="contact-modal">
       <div class="modal fade bs-example-modal-sm" 
            id="modalEmailSent" 
@@ -144,17 +152,10 @@
       </div>
     </div>
     {% endif %}
-    <!-- Fim modalEmailSent -->
 
+    {% if home %}
     {% include 'service-credit-modal/credit-service-modal.html'%}
-
-    {#
-    {% include 'service-credit-modal/modal_consulta.html'%}
-    {% include 'service-credit-modal/modal_analise.html'%}
-    {% include 'service-credit-modal/modal_negativacao.html'%}
-    {% include 'service-credit-modal/modal_meproteja.html'%}
-    {% include 'service-credit-modal/modal_infobusca.html'%}
-    #}
+    {% endif %}
 
     <!-- Footer Section -->
     <section id="footer" class="footer-section">
@@ -185,16 +186,12 @@
       </div>
     </section>
 
-
-
     <!-- JQuery 
     <script src="https://code.jquery.com/jquery-1.9.1.min.js" integrity="sha256-wS9gmOZBqsqWxgIVgA8Y9WcQOa7PgSIX+rPA0VL2rbQ=" crossorigin="anonymous"></script>
     -->
     <!-- Bootstrap Core JavaScript 
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     -->
-    <!-- Disable Google Maps scrolling -->
-    <script src="{% static 'js/map.js' %}"></script>
 
     <script>
       $(document).ready(function(){
