--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -193,6 +193,8 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     -->
 
+    {% compress js %}
+
     <script>
       $(document).ready(function(){
 
@@ -232,6 +234,12 @@
         //    $(this).addClass("img-responsive")
         //});
       });
+
+    </script>
+
+    {% endcompress %}
+
+    <script>
 
       //Google Analytics
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
