--- a/source/templates/certificado-digital/tabela.html
+++ b/source/templates/certificado-digital/tabela.html
@@ -9,7 +9,7 @@
             <div class="content">
               <div class="table">
                 <div class="table-cell">
-                  <img class="img-responsive" src="{{ modelo.imagem }}"></img>
+                  <img class="img-responsive" src="{{ modelo.imagem.url }}"></img>
                 </div>
               </div>
             </div>
@@ -112,7 +112,7 @@
             <div class="content-nfe">
               <div class="table">
                 <div class="table-cell">
-                  <img class="img-responsive" src="{{ modelo.imagem }}"></img>
+                  <img class="img-responsive" src="{{ modelo.imagem.url }}"></img>
                 </div>
               </div>
             </div>
